--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="recipies-section">
+        <div class="myrecipies">
             <h2> My Recipies</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id eveniet beatae non error sapiente quod iure sed a ea in dicta ratione voluptatem illo ipsum dolor, laborum sit ab?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.  Magni id eveniet beatae non error <br> sapiente quod iure sed a ea in dicta ratione voluptatem illo ipsum dolor, laborum sit ab?</p>
         </div>
         <div class="featured-food">
             <div class="threeitem">
@@ -62,6 +62,21 @@
                     dolores veritatis sint expedita saepe aliquam eaque sunt beatae quidem cumque, cupiditate laborum atque ea?</p>
             
             </div>
+        </div>
+    </section>
+
+    <section class="fan">
+        <div class="fancontent">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="fancontent">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="fancontent">
+            <h1>100k</h1>
+            <p>Dribbble Shot Like</p>
         </div>
     </section>
 </body>
