map section added and font family

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Food Network</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="heroandmiddle">
@@ -118,6 +122,25 @@
             </div>
         </div>
     </section>
+
+    <!--google map section started-->
+    <section class="mapsection">
+        <div class="half-width-last">
+            <h1>Contact Us</h1>
+            <address>
+                Street name 1, City <br>
+                +569 2698 0256 <br>
+                email@companyname.com <br>
+                email2@companyname.com
+            </address>
+        </div>
+        <div class="half-width-last">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64996221.286425166!2d-47.42136715000001!3d6.123364900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d4a866c72ca5c41%3A0x3bc7784783793d86!2sThe%20New%20York%20Restaurant!5e0!3m2!1sen!2sbd!4v1625575820979!5m2!1sen!2sbd"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </section>
+
 
     <section class="footercontent">
         <footer>
