update box shadow

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img class="threephoto" src="images/Project Cover1.jpg" alt="foodphoto">
                 <h2>Vegetable Food</h2>
                 <p>There's so much more to healthy salad than kale and chicken. Here, we list a ton of our absolute favorites—from totally
-                health-conscious options. we've got 50 amazing soup recipes for you.</p>
+                health-conscious options. we've got 50 amazing soup</p>
                 <a class="button" href="https://google.com" target="_blank">Order</a>
             </div>
 
@@ -104,7 +104,7 @@
     
             <div class="team-section">
                 <img class="team" src="images/Luis-Villasmil.jpeg" alt="photo">
-                <h2>Luis Villasmil</h2>
+                <h2> Luis Villasmil</h2>
                 <h3>BAR DIRECTOR</h3>
                 <p>The initial appointment will be for
                 one year, with a possibility for a multi-year contract after the successful completion of the first
